--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
         </thead>
         <tbody>
             <tr>
-                <td>Wireless Headphones</td>
+                <td>
+                    <ul style="list-style: none;">
+                        <li><img src="https://powerhouseexpress.com.pk/cdn/shop/files/xo-be36-headphones.jpg?v=1704441123"
+                                alt="" width="200px"></li>
+                        <li>Wireless Headphones</li>
+                    </ul>
+                </td>
                 <td>Premium noise-cancelling Bluetooth headphones<ul>
                         <li>40mm drivers</li>
                         <li>30-hours battery</li>
@@ -48,7 +54,13 @@
                 <td><button>Add to cart</button><br> Available quantities:15</td>
             </tr>
             <tr>
-                <td>Smart Watch Pro</td>
+                <td>
+                    <ul style="list-style-type: none;">
+                        <li><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvdi-VtmbwxU9v_fWhEFxq_CDrynZ5v0Xppw&s"
+                                alt="" width="150px"></li>
+                        <li>Smart Watch Pro</li>
+                    </ul>
+                </td>
                 <td>Advance fitness tracking smart watch<ul>
                         <li>Heart rate monitor</li>
                         <li>GPS tracking</li>
@@ -201,7 +213,7 @@
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <footer>
+    <footer>
         <h3>Quick Links</h3>
         <ul>
             <li><a href="">Terms of Services</a></li>
